--- a/landing.css
+++ b/landing.css
@@ -1,8 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Gruppo", sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    color:#fff;
 }
 
 header {
@@ -11,6 +12,19 @@ header {
     padding: 10px 0;
     
 }
+
+.gruppo-regular {
+    font-family: "Gruppo", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}  
+
+.rajdhani-light {
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+  
 
 nav ul {
     list-style: none;
@@ -34,6 +48,39 @@ section {
 
 #secao1 {
     background: #030637;
+    padding-bottom: 300px;
+    font-size: 30px;
+    padding-left: 0px;
+    display: flex;
+}
+
+#secao1 p{
+    padding-left: 20px;
+    flex: 2;
+}
+
+#secao1 h1{
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 300;
+    font-size: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 50px;
+    flex:2;
+}
+
+#secao1 img{
+    position: relative;
+    margin-left: 0px;
+    padding-left: 0px;
+    border-left: 0px;    
+    width: 400px;
+    height: 800px;
+    object-fit: cover;
+    object-position: center;
+    flex: 1;
+    overflow: hidden;
+    
 }
 
 #secao2 {
