--- a/landing.css
+++ b/landing.css
@@ -3,28 +3,28 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color:#fff;
+    color: #fff;
 }
 
 header {
     background: #010214;
     color: #fff;
     padding: 10px 0;
-    
+
 }
 
 .gruppo-regular {
     font-family: "Gruppo", sans-serif;
     font-weight: 400;
     font-style: normal;
-}  
+}
 
 .rajdhani-light {
     font-family: "Rajdhani", sans-serif;
     font-weight: 300;
     font-style: normal;
 }
-  
+
 
 nav ul {
     list-style: none;
@@ -48,51 +48,142 @@ section {
 
 #secao1 {
     background: #030637;
-    padding-bottom: 300px;
-    font-size: 30px;
+    padding-bottom: 5 0px;
+    font-size: 20px;
     padding-left: 0px;
     display: flex;
 }
 
-#secao1 p{
+#secao1 p {
     padding-left: 20px;
+    padding-right: 20px;
     flex: 2;
 }
 
-#secao1 h1{
+#secao1 h1 {
     font-family: "Rajdhani", sans-serif;
     font-weight: 300;
     font-size: 100px;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 50px;
-    flex:2;
+    flex: 2;
 }
 
-#secao1 img{
+#secao1 img {
     position: relative;
     margin-left: 0px;
     padding-left: 0px;
-    border-left: 0px;    
+    border-left: 0px;
     width: 400px;
-    height: 800px;
+    height: 400px;
     object-fit: cover;
     object-position: center;
     flex: 1;
     overflow: hidden;
-    
 }
 
 #secao2 {
     background: #3C0753;
+    display: flex;
+    padding-bottom: 50px;
+    font-size: 17px;
+    padding-left: 0px;
+}
+
+#secao2 div {
+    padding-left: 50px;
+    display: block;
+}
+
+#secao2 h2 {
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 300;
+    font-size: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 50px;
+}
+
+#secao2 h3 {
+    display: block;
+}
+
+#secao2 img {
+    display: flex;
+    margin-left: auto;
+    width: 300px;
+    height: 600px;
+    object-fit: cover;
+    object-position: center;
+    flex: 2;
+    margin-left: 30px;
+    align-items: stretch;
 }
 
 #secao3 {
     background: #720455;
+    padding-bottom: 5 0px;
+    font-size: 20px;
+    padding-left: 0px;
+    display: flex;
+}
+
+#secao3 h2 {
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 300;
+    font-size: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    display: block;
+}
+
+#secao3 p {
+    padding-left: 50px;
+
+}
+
+#secao3 div {
+    display: block;
+    margin-left: 50px;
+}
+
+#secao3 img {
+    display: flex;
+    margin-left: auto;
+    width: 600px;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    flex: 2;
+    margin-left: 30px;
+    align-items: stretch;
 }
 
 #secao4 {
     background: #910A67;
+    padding-bottom: 5 0px;
+    font-size: 20px;
+    padding-left: 0px;
+    display: flex;
+}
+
+#secao4 h2 {
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 300;
+    font-size: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 50px;
+}
+
+#secao4 div {
+    justify-content: space-between;
+    margin-left: 30px;
+}
+
+#secao4 .oi {
+    padding-left: 50px;
 }
 
 footer {
